# NYXOR

./: .gitignore  CHANGELOG.md  CHECKSUMS.txt  LICENSE  README.md  README_EN.md  THIRD_PARTY_NOTICES.md  constants.py  install.sh  nyxor_app.py  nyxor_auth.py  nyxor_campaigns.py  nyxor_channels.py  nyxor_core.py  nyxor_hls_test.py  nyxor_miner.py  nyxor_player.py  nyxor_points.py  nyxor_points_probe.py  nyxor_priority.py  nyxor_rewards.py  nyxor_self_check.py  nyxor_settings.example.json  nyxor_worker.py  pyproject.toml  requirements-termux.txt  requirements.txt  uninstall.sh
locales/: en.json  uk.json
nyxor/: __init__.py  formatting.py  game_search.py  localization.py  paths.py  process_control.py  storage.py
nyxor/ui/: __init__.py  app.py  dashboard.py  history.py  process.py  queue.py  settings.py  streamers.py  styles.py
nyxor/worker/: __init__.py  runtime.py
